--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,28 +138,14 @@
   background-image: url("/img/big-dice.png");
   background-repeat: no-repeat;
   background-position: center;
-  object-fit: cover;
+  object-fit: contain;
 }
-.one {
-  background-image: url("/img/1.png");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.two {
-  background-image: url("/img/2.png");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.three {
-  background-image: url("/img/3.png");
-  background-repeat: no-repeat;
-  background-position: center;
-}
+
 @utility paddingY {
   @apply py-8 md:py-16 lg:py-20;
 }
 @utility title {
-  @apply text-app-white text-5xl sm:text-6xl md:text-8xl md:leading-24 tracking-tighter font-bold;
+  @apply text-app-white text-5xl sm:text-6xl md:text-8xl md:leading-24 tracking-wider font-bold;
 }
 @utility card {
   @apply rounded-4xl bg-app-white p-10 space-y-3;
